fix: - Menu alignment, font type - Delete asynchronous scripts in the queue

--- a/foresight-theme/src/static/css/base.css
+++ b/foresight-theme/src/static/css/base.css
@@ -55,8 +55,18 @@
 		font-montserrat
 		text-[17px]
 		not-italic
-		font-bold;
+		font-bold
+		uppercase;
 	  }
+
+	 .item_secondary_menu_mobile {
+		@apply
+		font-open
+		text-base
+		not-italic
+		font-normal
+		uppercase;
+	 }
 	/* end menus */
 
 
